fix: add flex-wrap for 2 clases

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 
 .nav-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
@@ -107,6 +108,7 @@ body {
 /*profile*/
 .section-profile {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
     padding: 50px 30px 35px;
